Add core structure for home page.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Craft Beer Tasting | A unique Irish experience</title>
 </head>
+
 <body>
-    
+    <article>
+
+        <!-- callout -->
+        <section class="callout">
+            <h1>We love Craft Beer and want you to love your Beer as much as we do!</h1>
+            <p>Enjoy the session at a time which is convenient for you. Prices are from &#128;35</p>
+        </section>
+        <!-- callout -->
+        <hr>
+
+        <!-- testimonials -->
+        <section class="testimonials">
+            <h2>Testimonials</h2>
+            <div class="testimonial">
+                <p>This was one of the best experiences we’ve had in Dublin by far! Even my friend who is not a beer
+                    drinker enjoyed it!</p>
+                <p>Michael F.</p>
+            </div>
+            <div class="testimonial">
+                <p>I’m so glad I chose this place. I’ve had a great time and I’m very pleased with the service. A great
+                    afternoon with extra advice about Dublin.</p>
+                <p>John B.</p>
+            </div>
+            <div class="testimonial">
+                <p>Amazing! As a local, this was a great experience! We had a lot of fun and I will be sure to do it
+                    again. Well worth it!</p>
+                <p>John B.</p>
+            </div>
+        </section>
+        <!-- testimonials -->
+        <hr>
+
+        <!-- Features -->
+        <section class="features">
+            <h2>Features</h2>
+            <div class="feature">
+                <h3>Food</h3>
+                <p>Choices Include:</p>
+                <ul>
+                    <li>Spicy Chicken Wings & Chips</li>
+                    <li>Beer Battered fish & Chips</li>
+                    <li>Irish Beef Burger (8oz)</li>
+                    <li>Grilled Chicken Burger</li>
+                    <li>Scampi &Fries</li>
+                    <li>Fresh Wild mushrooms & Pasta</li>
+                </ul>
+            </div>
+
+            <div class="feature">
+                <h3>Drink</h3>
+                <p>A Sample of Various Irish/Celtic Craft beers will be sampled during the tasting session.</p>
+                <ul>
+                    <li>Scraggy Bay</li>
+                    <li>The Wicklow Brewery Stout</li>
+                    <li>Mescan Brewery Beer</li>
+                    <li>O’Hara’s Irish Wheat</li>
+                    <li>Murphy’s Irish Stout</li>
+                    <li>Guinness: The king of Irish stouts</li>
+                </ul>
+            </div>
+        </section>
+        <!-- Features -->
+    </article>
 </body>
+
 </html>
