--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Craft Beer Tasting | A unique Irish experience</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
@@ -21,7 +25,7 @@
 
         <!-- testimonials -->
         <section class="testimonials">
-            <h2>Testimonials</h2>
+            <h2 class="text-uppercase">Testimonials</h2>
             <div class="testimonial">
                 <p>This was one of the best experiences we’ve had in Dublin by far! Even my friend who is not a beer
                     drinker enjoyed it!</p>
@@ -43,7 +47,7 @@
 
         <!-- Features -->
         <section class="features">
-            <h2>Features</h2>
+            <h2 class="text-uppercase">Features</h2>
             <div class="feature">
                 <h3>Food</h3>
                 <p>Choices Include:</p>
