--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
         </section>
         <!-- Features -->
     </article>
+    <footer>
+        <span>&reg;2021</span>
+        <p>Craft Beer Tasting | A unique Irish experience</p>
+    </footer>
 </body>
 
 </html>
