Add font awesome and icons.

--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Craft Beer Tasting | A unique Irish experience</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
 <body>
     <article>
-
         <!-- callout -->
         <section class="callout">
             <h1>We love Craft Beer and want you to love your Beer as much as we do!</h1>
             <p>Enjoy the session at a time which is convenient for you. Prices are from &#128;35</p>
         </section>
-        <!-- callout -->
+        <!-- End callout -->
         <hr>
 
         <!-- testimonials -->
@@ -49,7 +49,7 @@
         <section class="features">
             <h2 class="text-uppercase">Features</h2>
             <div class="feature">
-                <h3>Food</h3>
+                <i class="fas fa-utensils"></i><h3>Food</h3>
                 <p>Choices Include:</p>
                 <ul>
                     <li>Spicy Chicken Wings & Chips</li>
@@ -62,7 +62,7 @@
             </div>
 
             <div class="feature">
-                <h3>Drink</h3>
+                <i class="fas fa-beer"></i><h3>Drink</h3>
                 <p>A Sample of Various Irish/Celtic Craft beers will be sampled during the tasting session.</p>
                 <ul>
                     <li>Scraggy Bay</li>
@@ -80,6 +80,8 @@
         <span>&reg;2021</span>
         <p>Craft Beer Tasting | A unique Irish experience</p>
     </footer>
+
+    <script src="https://kit.fontawesome.com/2564f6ed16.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
