Fix a html 'a numeric character reference' error.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </head>
 
 <body>
-    <article>
+    <div>
         <!-- callout -->
         <section class="callout">
             <h1>We love Craft Beer and want you to love your Beer as much as we do!</h1>
-            <p>Enjoy the session at a time which is convenient for you. Prices are from &#128;35</p>
+            <p>Enjoy the session at a time which is convenient for you. Prices are from &#8364;35</p>
         </section>
         <!-- End callout -->
         <hr>
@@ -75,7 +75,8 @@
             </div>
         </section>
         <!-- Features -->
-    </article>
+    </div>
+
     <footer>
         <span>&reg;2021</span>
         <p>Craft Beer Tasting | A unique Irish experience</p>
