Add more text for callout section.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
 </head>
 
 <body>
-    <div>
+    <div class="container">
         <!-- callout -->
         <section class="callout">
             <h1>We love Craft Beer and want you to love your Beer as much as we do!</h1>
-            <p>Enjoy the session at a time which is convenient for you. Prices are from &#8364;35</p>
+            <p class="lead">Enjoy the session at a time which is convenient for you. <strong><mark>Prices are from
+                        &#8364;35</mark></strong></p>
+            <p class="text-muted"><small>You must be over 18 to sign up to our service. Please drink responsibility.</small></p>
         </section>
         <!-- End callout -->
         <hr>
@@ -26,30 +28,35 @@
         <!-- testimonials -->
         <section class="testimonials">
             <h2 class="text-uppercase">Testimonials</h2>
-            <div class="testimonial">
+
+            <blockquote class="testimonial">
                 <p>This was one of the best experiences we’ve had in Dublin by far! Even my friend who is not a beer
                     drinker enjoyed it!</p>
                 <p>Michael F.</p>
-            </div>
-            <div class="testimonial">
+            </blockquote>
+
+            <blockquote class="testimonial">
                 <p>I’m so glad I chose this place. I’ve had a great time and I’m very pleased with the service. A great
                     afternoon with extra advice about Dublin.</p>
                 <p>John B.</p>
-            </div>
-            <div class="testimonial">
+            </blockquote>
+
+            <blockquote class="testimonial">
                 <p>Amazing! As a local, this was a great experience! We had a lot of fun and I will be sure to do it
                     again. Well worth it!</p>
-                <p>John B.</p>
-            </div>
+                <p>Ciara T.</p>
+            </blockquote>
+            
         </section>
         <!-- testimonials -->
         <hr>
 
         <!-- Features -->
         <section class="features">
-            <h2 class="text-uppercase">Features</h2>
+            <h2 class="text-uppercase">What we offer</h2>
             <div class="feature">
-                <i class="fas fa-utensils"></i><h3>Food</h3>
+                <i class="fas fa-utensils"></i>
+                <h3>Food</h3>
                 <p>Choices Include:</p>
                 <ul>
                     <li>Spicy Chicken Wings & Chips</li>
@@ -62,7 +69,8 @@
             </div>
 
             <div class="feature">
-                <i class="fas fa-beer"></i><h3>Drink</h3>
+                <i class="fas fa-beer"></i>
+                <h3>Drink</h3>
                 <p>A Sample of Various Irish/Celtic Craft beers will be sampled during the tasting session.</p>
                 <ul>
                     <li>Scraggy Bay</li>
