Add buttons throughout the page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <h1>We love Craft Beer and want you to love your Beer as much as we do!</h1>
             <p class="lead">Enjoy the session at a time which is convenient for you. <strong><mark>Prices are from
                         &#8364;35</mark></strong></p>
+            <button class="btn btn-primary btn-lg">Sign Up!</button>
             <p class="text-muted"><small>You must be over 18 to sign up to our service. Please drink responsibility.</small></p>
         </section>
         <!-- End callout -->
@@ -29,24 +30,24 @@
         <section class="testimonials">
             <h2 class="text-uppercase">Testimonials</h2>
 
-            <blockquote class="testimonial">
+            <blockquote class="blockquote">
                 <p>This was one of the best experiences we’ve had in Dublin by far! Even my friend who is not a beer
                     drinker enjoyed it!</p>
                 <p>Michael F.</p>
             </blockquote>
 
-            <blockquote class="testimonial">
+            <blockquote class="blockquote">
                 <p>I’m so glad I chose this place. I’ve had a great time and I’m very pleased with the service. A great
                     afternoon with extra advice about Dublin.</p>
                 <p>John B.</p>
             </blockquote>
 
-            <blockquote class="testimonial">
+            <blockquote class="blockquote">
                 <p>Amazing! As a local, this was a great experience! We had a lot of fun and I will be sure to do it
                     again. Well worth it!</p>
                 <p>Ciara T.</p>
             </blockquote>
-            
+
         </section>
         <!-- testimonials -->
         <hr>
@@ -66,6 +67,7 @@
                     <li>Scampi &Fries</li>
                     <li>Fresh Wild mushrooms & Pasta</li>
                 </ul>
+                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
             </div>
 
             <div class="feature">
@@ -80,6 +82,7 @@
                     <li>Murphy’s Irish Stout</li>
                     <li>Guinness: The king of Irish stouts</li>
                 </ul>
+                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
             </div>
         </section>
         <!-- Features -->
