Add cols rules to sections.

--- a/index.html
+++ b/index.html
@@ -16,82 +16,116 @@
 <body>
     <div class="container">
         <!-- callout -->
-        <section class="callout">
-            <h1>We love Craft Beer and want you to love your Beer as much as we do!</h1>
-            <p class="lead">Enjoy the session at a time which is convenient for you. <strong><mark>Prices are from
-                        &#8364;35</mark></strong></p>
-            <button class="btn btn-primary btn-lg">Sign Up!</button>
-            <p class="text-muted"><small>You must be over 18 to sign up to our service. Please drink responsibility.</small></p>
-        </section>
+        <div class="row">
+            <div class="col-12">
+                <section class="callout">
+                    <h1>We love Craft Beer and want you to love your Beer as much as we do!</h1>
+                    <p class="lead">Enjoy the session at a time which is convenient for you. <strong><mark>Prices are
+                                from
+                                &#8364;35*</mark></strong></p>
+                    <button class="btn btn-primary btn-lg">Sign Up!</button>
+                    <p class="text-muted"><small><em>*You must be over 18 to sign up to our service. Please drink
+                                responsibility.</em></small></p>
+                </section>
+            </div>
+        </div>
         <!-- End callout -->
-        <hr>
-
-        <!-- testimonials -->
-        <section class="testimonials">
-            <h2 class="text-uppercase">Testimonials</h2>
-
-            <blockquote class="blockquote">
-                <p>This was one of the best experiences we’ve had in Dublin by far! Even my friend who is not a beer
-                    drinker enjoyed it!</p>
-                <p>Michael F.</p>
-            </blockquote>
-
-            <blockquote class="blockquote">
-                <p>I’m so glad I chose this place. I’ve had a great time and I’m very pleased with the service. A great
-                    afternoon with extra advice about Dublin.</p>
-                <p>John B.</p>
-            </blockquote>
-
-            <blockquote class="blockquote">
-                <p>Amazing! As a local, this was a great experience! We had a lot of fun and I will be sure to do it
-                    again. Well worth it!</p>
-                <p>Ciara T.</p>
-            </blockquote>
-
-        </section>
-        <!-- testimonials -->
         <hr>
 
         <!-- Features -->
         <section class="features">
-            <h2 class="text-uppercase">What we offer</h2>
-            <div class="feature">
-                <i class="fas fa-utensils"></i>
-                <h3>Food</h3>
-                <p>Choices Include:</p>
-                <ul>
-                    <li>Spicy Chicken Wings & Chips</li>
-                    <li>Beer Battered fish & Chips</li>
-                    <li>Irish Beef Burger (8oz)</li>
-                    <li>Grilled Chicken Burger</li>
-                    <li>Scampi &Fries</li>
-                    <li>Fresh Wild mushrooms & Pasta</li>
-                </ul>
-                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-uppercase">What we offer</h2>
+                </div>
             </div>
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <div class="feature">
+                        <i class="fas fa-utensils"></i>
+                        <h3>Food</h3>
+                        <p>Choices Include:</p>
+                        <ul>
+                            <li>Spicy Chicken Wings & Chips</li>
+                            <li>Beer Battered fish & Chips</li>
+                            <li>Irish Beef Burger (8oz)</li>
+                            <li>Grilled Chicken Burger</li>
+                            <li>Scampi &Fries</li>
+                            <li>Fresh Wild mushrooms & Pasta</li>
+                        </ul>
+                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                    </div>
+                </div>
 
-            <div class="feature">
-                <i class="fas fa-beer"></i>
-                <h3>Drink</h3>
-                <p>A Sample of Various Irish/Celtic Craft beers will be sampled during the tasting session.</p>
-                <ul>
-                    <li>Scraggy Bay</li>
-                    <li>The Wicklow Brewery Stout</li>
-                    <li>Mescan Brewery Beer</li>
-                    <li>O’Hara’s Irish Wheat</li>
-                    <li>Murphy’s Irish Stout</li>
-                    <li>Guinness: The king of Irish stouts</li>
-                </ul>
-                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                <div class="col-12 col-md-6">
+                    <div class="feature">
+                        <i class="fas fa-beer"></i>
+                        <h3>Drink</h3>
+                        <p>A Sample of Various Irish/Celtic Craft beers will be sampled during the tasting session.</p>
+                        <ul>
+                            <li>Scraggy Bay</li>
+                            <li>The Wicklow Brewery Stout</li>
+                            <li>Mescan Brewery Beer</li>
+                            <li>O’Hara’s Irish Wheat</li>
+                            <li>Murphy’s Irish Stout</li>
+                            <li>Guinness: The king of Irish stouts</li>
+                        </ul>
+                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                    </div>
+                </div>
             </div>
         </section>
         <!-- Features -->
+
+        <!-- testimonials -->
+        <section class="testimonials">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-uppercase">Testimonials</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-6 col-lg-4">
+                    <blockquote class="blockquote">
+                        <p>This was one of the best experiences we’ve had in Dublin by far! Even my friend who is not a
+                            beer
+                            drinker enjoyed it!</p>
+                        <p>Michael F.</p>
+                    </blockquote>
+                </div>
+
+                <div class="col-12 col-md-6 col-lg-4">
+                    <blockquote class="blockquote">
+                        <p>I’m so glad I chose this place. I’ve had a great time and I’m very pleased with the service.
+                            A
+                            great
+                            afternoon with extra advice about Dublin.</p>
+                        <p>John B.</p>
+                    </blockquote>
+                </div>
+
+                <div class="col-12 d-md-none d-lg-block col-lg-4">
+                    <blockquote class="blockquote">
+                        <p>Amazing! As a local, this was a great experience! We had a lot of fun and I will be sure to
+                            do it
+                            again. Well worth it!</p>
+                        <p>Ciara T.</p>
+                    </blockquote>
+                </div>
+            </div>
+        </section>
+        <!-- testimonials -->
+        <hr>
+
+        <footer>
+            <div class="row">
+                <div class="col-12">
+                    <p>&reg;2021 Craft Beer Tasting | A unique Irish experience</p>
+                </div>
+            </div>
+        </footer>
     </div>
 
-    <footer>
-        <span>&reg;2021</span>
-        <p>Craft Beer Tasting | A unique Irish experience</p>
-    </footer>
 
     <script src="https://kit.fontawesome.com/2564f6ed16.js" crossorigin="anonymous"></script>
 </body>
