--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-light bg-light navbar-expand-sm">
+        <a href="/" class="navbrar-brand">Craft Beer Tasting</a>
+        <ul class="navbar-nav mr-auto">
+            <li class="active nav-item mr-2"><a href="/" class="nav-link">Home</a></li>
+            <li class="nav-item mr-2"><a href="/about" class="nav-link">About</a></li>
+            <li class="nav-item mr-2 d-block d-sm-none"><a href="/login" class="nav-link">Sign in | Sign up</a></li>
+        </ul>
+        <div class="d-none d-md-block">
+            <p class="navbar-text my-auto mr-2"><i>A variety of beer styles to suit all tastes.</i></p>
+            <a href="/login">Sign in | Sign up</a>
+        </div>
+    </nav>
     <div class="container">
         <!-- callout -->
         <div class="row">
