--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
             <a href="/login">Sign in | Sign up</a>
         </div>
     </nav>
-    <div class="container">
+    <div class="container mt-3">
         <!-- callout -->
         <div class="row">
             <div class="col-12">
-                <section class="callout">
+                <section class="callout jumbotron text-center">
                     <h1>We love Craft Beer and want you to love your Beer as much as we do!</h1>
-                    <p class="lead">Enjoy the session at a time which is convenient for you. <strong><mark>Prices are
-                                from
-                                &#8364;35*</mark></strong></p>
+                    <p class="lead">Enjoy the session at a time which is convenient for you.
+                        <span class="d-inline d-sm-none"><br></span>
+                        <strong><mark>Prices are from &#8364;35*</mark></strong>
+                    </p>
                     <button class="btn btn-primary btn-lg">Sign Up!</button>
                     <p class="text-muted"><small><em>*You must be over 18 to sign up to our service. Please drink
                                 responsibility.</em></small></p>
@@ -48,7 +49,7 @@
         <section class="features">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-uppercase">What we offer</h2>
+                    <h2 class="text-uppercase my-5">What we offer</h2>
                 </div>
             </div>
             <div class="row">
@@ -93,36 +94,66 @@
         <section class="testimonials">
             <div class="row">
                 <div class="col-12">
-                    <h2 class="text-uppercase">Testimonials</h2>
+                    <h2 class="text-uppercase my-5">Testimonials</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-12 col-md-6 col-lg-4">
-                    <blockquote class="blockquote">
-                        <p>This was one of the best experiences we’ve had in Dublin by far! Even my friend who is not a
-                            beer
-                            drinker enjoyed it!</p>
-                        <p>Michael F.</p>
-                    </blockquote>
+                    <div class="media">
+                        <div class="d-none d-md-block">
+                            <img src="./assets/images/image-1.jpg" class="rounded-circle mr-3"
+                                height="100" width="100" alt="">
+                        </div>
+                        <div class="media-body">
+                            <blockquote class="blockquote">
+                                <p>This was one of the best experiences we’ve had in Dublin by far! Even my friend who
+                                    is
+                                    not a
+                                    beer
+                                    drinker enjoyed it!</p>
+                                <p>Michael F.</p>
+                            </blockquote>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="col-12 col-md-6 col-lg-4">
-                    <blockquote class="blockquote">
-                        <p>I’m so glad I chose this place. I’ve had a great time and I’m very pleased with the service.
-                            A
-                            great
-                            afternoon with extra advice about Dublin.</p>
-                        <p>John B.</p>
-                    </blockquote>
+                    <div class="media">
+                        <div class="d-none d-md-block">
+                            <img src="./assets/images/image-2.jpg" class="rounded-circle mr-3"
+                                height="100" width="100" alt="">
+                        </div>
+                        <div class="media-body">
+                            <blockquote class="blockquote">
+                                <p>I’m so glad I chose this place. I’ve had a great time and I’m very pleased with
+                                    the
+                                    service.
+                                    A
+                                    great
+                                    afternoon with extra advice about Dublin.</p>
+                                <p>John B.</p>
+                            </blockquote>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="col-12 d-md-none d-lg-block col-lg-4">
-                    <blockquote class="blockquote">
-                        <p>Amazing! As a local, this was a great experience! We had a lot of fun and I will be sure to
-                            do it
-                            again. Well worth it!</p>
-                        <p>Ciara T.</p>
-                    </blockquote>
+                    <div class="media">
+                        <div class="d-none d-md-block">
+                            <img src="./assets/images/image-3.jpg" class="rounded-circle mr-3"
+                                height="100" width="100" alt="">
+                        </div>
+                        <div class="media-body">
+                            <blockquote class="blockquote">
+                                <p>Amazing! As a local, this was a great experience! We had a lot of fun and I will
+                                    be
+                                    sure to
+                                    do it
+                                    again. Well worth it!</p>
+                                <p>Ciara T.</p>
+                            </blockquote>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
