--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
 </head>
 
 <body>
+    <div class="row">
+        <div class="col-12">
+            <div class="d-none d-sm-inline">
+                <div class="alert alert-warning mb-0">
+                    <strong>Sales Now On! </strong>Limited space available.</strong> 
+                    <a href="#" class="alert-link">Click here to register!</a>
+                </div>
+            </div>
+        </div>
+    </div>
     <nav class="navbar navbar-light bg-light navbar-expand-sm">
         <a href="/" class="navbrar-brand">Craft Beer Tasting</a>
         <ul class="navbar-nav mr-auto">
@@ -55,8 +65,8 @@
             <div class="row">
                 <div class="col-12 col-md-6">
                     <div class="feature">
-                        <i class="fas fa-utensils"></i>
-                        <h3>Food</h3>
+                        <i class="fas fa-utensils d-none d-sm-inline"></i>
+                        <h3>Food <span class="badge badge-success">NEW!</span></h3>
                         <p>Choices Include:</p>
                         <ul>
                             <li>Spicy Chicken Wings & Chips</li>
@@ -72,7 +82,7 @@
 
                 <div class="col-12 col-md-6">
                     <div class="feature">
-                        <i class="fas fa-beer"></i>
+                        <i class="fas fa-beer d-none d-sm-inline"></i>
                         <h3>Drink</h3>
                         <p>A Sample of Various Irish/Celtic Craft beers will be sampled during the tasting session.</p>
                         <ul>
@@ -101,8 +111,8 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="media">
                         <div class="d-none d-md-block">
-                            <img src="./assets/images/image-1.jpg" class="rounded-circle mr-3"
-                                height="100" width="100" alt="">
+                            <img src="./assets/images/image-1.jpg" class="rounded-circle mr-3" height="100" width="100"
+                                alt="">
                         </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
@@ -120,8 +130,8 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="media">
                         <div class="d-none d-md-block">
-                            <img src="./assets/images/image-2.jpg" class="rounded-circle mr-3"
-                                height="100" width="100" alt="">
+                            <img src="./assets/images/image-2.jpg" class="rounded-circle mr-3" height="100" width="100"
+                                alt="">
                         </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
@@ -140,8 +150,8 @@
                 <div class="col-12 d-md-none d-lg-block col-lg-4">
                     <div class="media">
                         <div class="d-none d-md-block">
-                            <img src="./assets/images/image-3.jpg" class="rounded-circle mr-3"
-                                height="100" width="100" alt="">
+                            <img src="./assets/images/image-3.jpg" class="rounded-circle mr-3" height="100" width="100"
+                                alt="">
                         </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
