--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+    <link rel="shortcut icon" href="./assets/images/craftbeer_icon.png" type="image/x-icon">
+
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -18,14 +20,17 @@
         <div class="col-12">
             <div class="d-none d-sm-inline">
                 <div class="alert alert-warning mb-0 text-center">
-                    <strong>Sales Now On! </strong>Limited space available.</strong>
+                    <strong>Sales Now On! </strong>Limited spaces available.</strong>
                     <a href="#" class="alert-link">Click here to register!</a>
                 </div>
             </div>
         </div>
     </div>
-    <nav class="navbar navbar-light bg-light navbar-expand-sm">
-        <a href="/" class="navbrar-brand">Craft Beer Tasting</a>
+    <nav class="navbar navbar-dark bg-dark navbar-expand-sm">
+        <a href="/" class="navbar-brand">
+            <img src="./assets/images/craftbeer_icon.png" width="48" height="48" class="d-inline-block align-center"
+                loading="lazy" alt="craft beer icon">
+            <span class="d-none d-sm-inline">Craft Beer Tasting</span></a>
 
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDrodown" aria-expanded="false" aria-label="Toggle navigation">
@@ -71,7 +76,8 @@
                         <span class="d-inline d-sm-none"><br></span>
                         <strong><mark>Prices are from &#8364;35*</mark></strong>
                     </p>
-                    <button class="btn btn-primary btn-lg">Sign Up!</button>
+                    <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#signUpModal">Sign
+                        Up!</button>
                     <p class="text-muted"><small><em>*You must be over 18 to sign up to our service. Please drink
                                 responsibility.</em></small></p>
                 </section>
@@ -202,6 +208,39 @@
                 </div>
             </div>
         </footer>
+    </div>
+
+    <div class="modal" tabindex="-1" role="dialog" aria-hidden="true" id="signUpModal">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Sign Up to Craft Beer Tasting TODAY!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="email">Email address</label>
+                            <input type="email" class="form-control" id="email"
+                                aria-describedby="emailHelp">
+                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                                else.</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="password">Password</label>
+                            <input type="password" class="form-control" id="password">
+                        </div>
+                        <div class="form-group">
+                            <label for="repeat-password">Repeat Password</label>
+                            <input type="password" class="form-control" id="repeat-password">
+                        </div>
+                        <button type="submit" class="btn btn-success">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
