--- a/index.html
+++ b/index.html
@@ -16,16 +16,22 @@
 </head>
 
 <body>
-    <div class="row">
-        <div class="col-12">
-            <div class="d-none d-sm-inline">
-                <div class="alert alert-warning mb-0 text-center">
-                    <strong>Sales Now On! </strong>Limited spaces available.</strong>
-                    <a href="#" class="alert-link">Click here to register!</a>
+    <div class="alert-container">
+        <!-- Alert -->
+        <div class="row">
+            <div class="col-12">
+                <div class="d-none d-sm-inline">
+                    <div class="alert alert-warning mb-0 text-center">
+                        <strong>Sales Now On! </strong>Limited spaces available.</strong>
+                        <a href="#" class="alert-link">Click here to register!</a>
+                    </div>
                 </div>
             </div>
         </div>
+        <!-- End alert -->
     </div>
+
+    <!-- Navbar -->
     <nav class="navbar navbar-dark bg-dark navbar-expand-sm">
         <a href="/" class="navbar-brand">
             <img src="./assets/images/craftbeer_icon.png" width="48" height="48" class="d-inline-block align-center"
@@ -66,7 +72,9 @@
             <a href="/login">Sign in | Sign up</a>
         </div>
     </nav>
-    <div class="container mt-3">
+    <!-- End navbar -->
+
+    <div class="container callout-container mt-3">
         <!-- callout -->
         <div class="row">
             <div class="col-12">
@@ -83,10 +91,11 @@
                 </section>
             </div>
         </div>
-        <!-- End callout -->
-        <hr>
+    </div>
+    <!-- End callout -->
 
-        <!-- Features -->
+    <!-- Features -->
+    <div class="features-container">
         <section class="features">
             <div class="row">
                 <div class="col-12">
@@ -115,7 +124,9 @@
                     <div class="feature">
                         <i class="fas fa-beer d-none d-sm-inline"></i>
                         <h3>Drink</h3>
-                        <p>A Sample of Various Irish/Celtic Craft beers will be sampled during the tasting session.</p>
+                        <p>A Sample of Various Irish/Celtic Craft beers will be sampled during the tasting
+                            session.
+                        </p>
                         <ul>
                             <li>Scraggy Bay</li>
                             <li>The Wicklow Brewery Stout</li>
@@ -130,7 +141,9 @@
             </div>
         </section>
         <!-- Features -->
+    </div>
 
+    <div class="testimonials-container">
         <!-- testimonials -->
         <section class="testimonials">
             <div class="row">
@@ -147,11 +160,8 @@
                         </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
-                                <p>This was one of the best experiences we’ve had in Dublin by far! Even my friend who
-                                    is
-                                    not a
-                                    beer
-                                    drinker enjoyed it!</p>
+                                <p>This was one of the best experiences we’ve had in Dublin by far!
+                                    Even my friend who is not a beer drinker enjoyed it!</p>
                                 <p>Michael F.</p>
                             </blockquote>
                         </div>
@@ -166,12 +176,9 @@
                         </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
-                                <p>I’m so glad I chose this place. I’ve had a great time and I’m very pleased with
-                                    the
-                                    service.
-                                    A
-                                    great
-                                    afternoon with extra advice about Dublin.</p>
+                                <p>I’m so glad I chose this place. I’ve had a great time and
+                                    I’m very pleased with the service. A great afternoon
+                                    with extra advice about Dublin.</p>
                                 <p>John B.</p>
                             </blockquote>
                         </div>
@@ -186,10 +193,8 @@
                         </div>
                         <div class="media-body">
                             <blockquote class="blockquote">
-                                <p>Amazing! As a local, this was a great experience! We had a lot of fun and I will
-                                    be
-                                    sure to
-                                    do it
+                                <p>Amazing! As a local, this was a great experience!
+                                    We had a lot of fun and I will be sure to do it
                                     again. Well worth it!</p>
                                 <p>Ciara T.</p>
                             </blockquote>
@@ -199,16 +204,15 @@
             </div>
         </section>
         <!-- testimonials -->
-        <hr>
-
-        <footer>
-            <div class="row">
-                <div class="col-12">
-                    <p>&reg;2021 Craft Beer Tasting | A unique Irish experience</p>
-                </div>
-            </div>
-        </footer>
     </div>
+
+    <footer>
+        <div class="row">
+            <div class="col-12">
+                <p>&reg;2021 Craft Beer Tasting | A unique Irish experience</p>
+            </div>
+        </div>
+    </footer>
 
     <div class="modal" tabindex="-1" role="dialog" aria-hidden="true" id="signUpModal">
         <div class="modal-dialog" role="document">
@@ -223,9 +227,9 @@
                     <form>
                         <div class="form-group">
                             <label for="email">Email address</label>
-                            <input type="email" class="form-control" id="email"
-                                aria-describedby="emailHelp">
-                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with
+                                anyone
                                 else.</small>
                         </div>
                         <div class="form-group">
