--- a/index.html
+++ b/index.html
@@ -16,75 +16,83 @@
 </head>
 
 <body>
+
+    <!-- Alert -->
     <div class="alert-container">
-        <!-- Alert -->
         <div class="row">
             <div class="col-12">
                 <div class="d-none d-sm-inline">
                     <div class="alert alert-warning mb-0 text-center">
-                        <strong>Sales Now On! </strong>Limited spaces available.</strong>
+                        <strong>Sales Now On! </strong>Limited spaces available.
                         <a href="#" class="alert-link">Click here to register!</a>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- End alert -->
     </div>
+    <!-- End alert -->
 
     <!-- Navbar -->
-    <nav class="navbar navbar-dark bg-dark navbar-expand-sm">
-        <a href="/" class="navbar-brand">
-            <img src="./assets/images/craftbeer_icon.png" width="48" height="48" class="d-inline-block align-center"
-                loading="lazy" alt="craft beer icon">
-            <span class="d-none d-sm-inline">Craft Beer Tasting</span></a>
+    <div class="container-fluid navalert-container">
+        <nav class="navbar navbar-dark navbar-expand-sm">
+            <a href="/" class="navbar-brand">
+                <img src="./assets/images/craftbeer_icon.png" width="48" height="48" class="d-inline-block align-center"
+                    loading="lazy" alt="craft beer icon">
+                <span class="d-none d-sm-inline">Craft Beer Tasting</span></a>
 
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDrodown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav mr-auto">
-                <li class="active nav-item mr-2"><a href="/" class="nav-link">Home</a></li>
-                <li class="nav-item mr-2"><a href="/about" class="nav-link">About</a></li>
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav mr-auto">
+                    <li class="active nav-item mr-2"><a href="/" class="nav-link">Home</a></li>
+                    <li class="nav-item mr-2"><a href="/about" class="nav-link">About</a></li>
 
-                <li class="nav-item dropdown">
-                    <a href="" class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
-                        data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                        Craft Beers
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a href="#" class="dropdown-item">Irish</a>
-                        <a href="#" class="dropdown-item">British</a>
-                        <a href="#" class="dropdown-item">Germany</a>
-                        <a href="#" class="dropdown-item">Spain</a>
-                        <a href="#" class="dropdown-item">US</a>
-                    </div>
-                </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                            role="button" aria-haspopup="true" aria-expanded="false">
+                            Craft Beers
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a href="#" class="dropdown-item">Irish</a>
+                            <a href="#" class="dropdown-item">British</a>
+                            <a href="#" class="dropdown-item">Germany</a>
+                            <a href="#" class="dropdown-item">Spain</a>
+                            <a href="#" class="dropdown-item">US</a>
+                        </div>
+                    </li>
 
-                <li class="nav-item mr-2 d-block d-sm-none"><a href="/login" class="nav-link">Sign in | Sign up</a></li>
-            </ul>
+                    <li class="nav-item mr-2 d-block d-sm-none"><a href="/login" class="nav-link">Sign in | Sign up</a>
+                    </li>
+                </ul>
 
-        </div>
+            </div>
 
-        <div class="d-none d-md-block">
-            <p class="navbar-text my-auto mr-2"><i>A variety of beer styles to suit all tastes.</i></p>
-            <a href="/login">Sign in | Sign up</a>
-        </div>
-    </nav>
+            <div class="d-none d-md-block">
+                <p class="navbar-text my-auto mr-2"><i>A variety of beer styles to suit all tastes.</i></p>
+                <a href="/login">Sign in | Sign up</a>
+            </div>
+        </nav>
+    </div>
     <!-- End navbar -->
 
-    <div class="container callout-container mt-3">
+    <div class="container-fluid callout-container"
+        style="background: url('./assets/images/hero-image.jpg') no-repeat center center fixed;">
+        <div class="opacity-overlay">&nbsp;</div>
         <!-- callout -->
         <div class="row">
             <div class="col-12">
-                <section class="callout jumbotron text-center">
-                    <h1>We love Craft Beer and want you to love your Beer as much as we do!</h1>
+                <section class="container callout jumbotron text-center">
+                    <h1 class="jumbotron-header">We love Craft Beer and want you to love your Beer as much as we do!
+                    </h1>
+                    <hr class="block-divider block-divider__orange">
                     <p class="lead">Enjoy the session at a time which is convenient for you.
                         <span class="d-inline d-sm-none"><br></span>
                         <strong><mark>Prices are from &#8364;35*</mark></strong>
                     </p>
-                    <button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#signUpModal">Sign
+                    <button class="btn btn-lg btn__cta btn__red" data-toggle="modal" data-target="#signUpModal">Sign
                         Up!</button>
                     <p class="text-muted"><small><em>*You must be over 18 to sign up to our service. Please drink
                                 responsibility.</em></small></p>
@@ -206,6 +214,7 @@
         <!-- testimonials -->
     </div>
 
+    <!-- Footer -->
     <footer>
         <div class="row">
             <div class="col-12">
@@ -213,7 +222,9 @@
             </div>
         </div>
     </footer>
+    <!-- End Footer -->
 
+    <!-- Modal -->
     <div class="modal" tabindex="-1" role="dialog" aria-hidden="true" id="signUpModal">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -246,6 +257,7 @@
             </div>
         </div>
     </div>
+    <!-- End modal -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
