Add style to navbar.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <!-- Alert -->
-    <div class="alert-container">
+    <!-- <div class="alert-container">
         <div class="row">
             <div class="col-12">
                 <div class="d-none d-sm-inline">
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- End alert -->
 
     <!-- Navbar -->
