--- a/index.html
+++ b/index.html
@@ -17,23 +17,22 @@
 
 <body>
 
-    <!-- Alert -->
-    <!-- <div class="alert-container">
-        <div class="row">
-            <div class="col-12">
-                <div class="d-none d-sm-inline">
-                    <div class="alert alert-warning mb-0 text-center">
-                        <strong>Sales Now On! </strong>Limited spaces available.
-                        <a href="#" class="alert-link">Click here to register!</a>
+    <!-- Navbar -->
+    <div class="container-fluid navalert-container">
+        <!-- Alert -->
+        <div class="container-fluid alert-container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="d-none d-sm-inline">
+                        <div class="site-wide-alert alert alert-warning text-center">
+                            <strong>Sales Now On! </strong>Limited spaces available.
+                            <a href="#" class="alert-link">Click here to register!</a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div> -->
-    <!-- End alert -->
-
-    <!-- Navbar -->
-    <div class="container-fluid navalert-container">
+        <!-- End alert -->
         <nav class="navbar navbar-dark navbar-expand-sm">
             <a href="/" class="navbar-brand">
                 <img src="./assets/images/craftbeer_icon.png" width="48" height="48" class="d-inline-block align-center"
@@ -72,7 +71,7 @@
 
             <div class="d-none d-md-block">
                 <p class="navbar-text my-auto mr-2"><i>A variety of beer styles to suit all tastes.</i></p>
-                <a href="/login">Sign in | Sign up</a>
+                <a href="/login" class="btn btn__cta btn__red text-white">Sign in | Sign up</a>
             </div>
         </nav>
     </div>
@@ -103,11 +102,12 @@
     <!-- End callout -->
 
     <!-- Features -->
-    <div class="features-container">
+    <div class="container features-container content-container">
         <section class="features">
             <div class="row">
-                <div class="col-12">
-                    <h2 class="text-uppercase my-5">What we offer</h2>
+                <div class="col-12 page-header">
+                    <h2 class="text-uppercase">What we offer</h2>
+                    <hr class="block-divider block-divider__short">
                 </div>
             </div>
             <div class="row">
@@ -151,12 +151,12 @@
         <!-- Features -->
     </div>
 
-    <div class="testimonials-container">
+    <div class="container testimonials-container content-container">
         <!-- testimonials -->
         <section class="testimonials">
             <div class="row">
-                <div class="col-12">
-                    <h2 class="text-uppercase my-5">Testimonials</h2>
+                <div class="col-12 page-header">
+                    <h2 class="text-uppercase">Testimonials</h2>
                 </div>
             </div>
             <div class="row">
@@ -216,9 +216,11 @@
 
     <!-- Footer -->
     <footer>
-        <div class="row">
-            <div class="col-12">
-                <p>&reg;2021 Craft Beer Tasting | A unique Irish experience</p>
+        <div class="container my-3">
+            <div class="row">
+                <div class="col-12 text-center">
+                    <p>&reg;2021 Craft Beer Tasting | A unique Irish experience</p>
+                </div>
             </div>
         </div>
     </footer>
