Add alternative text to images.

--- a/index.html
+++ b/index.html
@@ -101,117 +101,122 @@
     </div>
     <!-- End callout -->
 
-    <!-- Features -->
-    <div class="container features-container content-container">
-        <section class="features">
-            <div class="row">
-                <div class="col-12 page-header">
-                    <h2 class="text-uppercase">What we offer</h2>
-                    <hr class="block-divider block-divider__short">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-6">
-                    <div class="feature">
-                        <i class="fas fa-utensils d-none d-sm-inline"></i>
-                        <h3>Food <span class="badge badge-success">NEW!</span></h3>
-                        <p>Choices Include:</p>
-                        <ul>
-                            <li>Spicy Chicken Wings & Chips</li>
-                            <li>Beer Battered fish & Chips</li>
-                            <li>Irish Beef Burger (8oz)</li>
-                            <li>Grilled Chicken Burger</li>
-                            <li>Scampi &Fries</li>
-                            <li>Fresh Wild mushrooms & Pasta</li>
-                        </ul>
-                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-                    </div>
-                </div>
-
-                <div class="col-12 col-md-6">
-                    <div class="feature">
-                        <i class="fas fa-beer d-none d-sm-inline"></i>
-                        <h3>Drink</h3>
-                        <p>A Sample of Various Irish/Celtic Craft beers will be sampled during the tasting
-                            session.
-                        </p>
-                        <ul>
-                            <li>Scraggy Bay</li>
-                            <li>The Wicklow Brewery Stout</li>
-                            <li>Mescan Brewery Beer</li>
-                            <li>O’Hara’s Irish Wheat</li>
-                            <li>Murphy’s Irish Stout</li>
-                            <li>Guinness: The king of Irish stouts</li>
-                        </ul>
-                        <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-                    </div>
-                </div>
-            </div>
-        </section>
+    <div class="container-wrapper">
         <!-- Features -->
+        <div class="container features-container content-container">
+            <section class="features">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <h2 class="text-uppercase">What we offer</h2>
+                        <hr class="block-divider block-divider__short">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="feature">
+                            <i class="fas fa-utensils d-none d-sm-inline"></i>
+                            <h3>Food <span class="badge badge-success">NEW!</span></h3>
+                            <p>Choices Include:</p>
+                            <ul>
+                                <li>Spicy Chicken Wings & Chips</li>
+                                <li>Beer Battered fish & Chips</li>
+                                <li>Irish Beef Burger (8oz)</li>
+                                <li>Grilled Chicken Burger</li>
+                                <li>Scampi &Fries</li>
+                                <li>Fresh Wild mushrooms & Pasta</li>
+                            </ul>
+                            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-6">
+                        <div class="feature">
+                            <i class="fas fa-beer d-none d-sm-inline"></i>
+                            <h3>Drink</h3>
+                            <p>A Sample of Various Irish/Celtic Craft beers will be sampled during the tasting
+                                session.
+                            </p>
+                            <ul>
+                                <li>Scraggy Bay</li>
+                                <li>The Wicklow Brewery Stout</li>
+                                <li>Mescan Brewery Beer</li>
+                                <li>O’Hara’s Irish Wheat</li>
+                                <li>Murphy’s Irish Stout</li>
+                                <li>Guinness: The king of Irish stouts</li>
+                            </ul>
+                            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- Features -->
+        </div>
     </div>
 
-    <div class="container testimonials-container content-container">
-        <!-- testimonials -->
-        <section class="testimonials">
-            <div class="row">
-                <div class="col-12 page-header">
-                    <h2 class="text-uppercase">Testimonials</h2>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="media">
-                        <div class="d-none d-md-block">
-                            <img src="./assets/images/image-1.jpg" class="rounded-circle mr-3" height="100" width="100"
-                                alt="">
-                        </div>
-                        <div class="media-body">
-                            <blockquote class="blockquote">
-                                <p>This was one of the best experiences we’ve had in Dublin by far!
-                                    Even my friend who is not a beer drinker enjoyed it!</p>
-                                <p>Michael F.</p>
-                            </blockquote>
-                        </div>
+    <div class="container-wrapper container-wrapper__red">
+        <div class="container testimonials-container content-container">
+            <!-- testimonials -->
+            <section class="testimonials">
+                <div class="row">
+                    <div class="col-12 page-header">
+                        <h2 class="text-uppercase">Testimonials</h2>
+                        <hr class="block-divider block-divider__short block-divider__white">
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="media">
+                            <div class="d-none d-md-block">
+                                <img src="./assets/images/image-1.jpg" class="rounded-circle mr-3" height="100"
+                                    width="100" alt="A man smilling at the camera and talking a self photo.">
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>This was one of the best experiences we’ve had in Dublin by far!
+                                        Even my friend who is not a beer drinker enjoyed it!</p>
+                                    <p>Michael F.</p>
+                                </blockquote>
+                            </div>
+                        </div>
+                    </div>
 
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="media">
-                        <div class="d-none d-md-block">
-                            <img src="./assets/images/image-2.jpg" class="rounded-circle mr-3" height="100" width="100"
-                                alt="">
-                        </div>
-                        <div class="media-body">
-                            <blockquote class="blockquote">
-                                <p>I’m so glad I chose this place. I’ve had a great time and
-                                    I’m very pleased with the service. A great afternoon
-                                    with extra advice about Dublin.</p>
-                                <p>John B.</p>
-                            </blockquote>
+                    <div class="col-12 col-md-6 col-lg-4">
+                        <div class="media">
+                            <div class="d-none d-md-block">
+                                <img src="./assets/images/image-2.jpg" class="rounded-circle mr-3" height="100"
+                                    width="100" alt="An older man smiling at the camera.">
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>I’m so glad I chose this place. I’ve had a great time and
+                                        I’m very pleased with the service. A great afternoon
+                                        with extra advice about Dublin.</p>
+                                    <p>John B.</p>
+                                </blockquote>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="col-12 d-md-none d-lg-block col-lg-4">
-                    <div class="media">
-                        <div class="d-none d-md-block">
-                            <img src="./assets/images/image-3.jpg" class="rounded-circle mr-3" height="100" width="100"
-                                alt="">
-                        </div>
-                        <div class="media-body">
-                            <blockquote class="blockquote">
-                                <p>Amazing! As a local, this was a great experience!
-                                    We had a lot of fun and I will be sure to do it
-                                    again. Well worth it!</p>
-                                <p>Ciara T.</p>
-                            </blockquote>
+                    <div class="col-12 d-md-none d-lg-block col-lg-4">
+                        <div class="media">
+                            <div class="d-none d-md-block">
+                                <img src="./assets/images/image-3.jpg" class="rounded-circle mr-3" height="100"
+                                    width="100" alt="A portrait of a woman looking at the camera.">
+                            </div>
+                            <div class="media-body">
+                                <blockquote class="blockquote">
+                                    <p>Amazing! As a local, this was a great experience!
+                                        We had a lot of fun and I will be sure to do it
+                                        again. Well worth it!</p>
+                                    <p>Ciara T.</p>
+                                </blockquote>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
-        <!-- testimonials -->
+            </section>
+            <!-- testimonials -->
+        </div>
     </div>
 
     <!-- Footer -->
