Add a new feature: pub crawl.

--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-md-4">
                         <div class="feature">
                             <i class="fas fa-utensils d-none d-sm-inline"></i>
-                            <h3>Food <span class="badge badge-success">NEW!</span></h3>
+                            <h3>Food</h3>
                             <p>Choices Include:</p>
                             <ul>
                                 <li>Spicy Chicken Wings & Chips</li>
@@ -129,7 +129,7 @@
                         </div>
                     </div>
 
-                    <div class="col-12 col-md-6">
+                    <div class="col-12 col-md-4">
                         <div class="feature">
                             <i class="fas fa-beer d-none d-sm-inline"></i>
                             <h3>Drink</h3>
@@ -143,6 +143,24 @@
                                 <li>O’Hara’s Irish Wheat</li>
                                 <li>Murphy’s Irish Stout</li>
                                 <li>Guinness: The king of Irish stouts</li>
+                            </ul>
+                            <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-md-4">
+                        <div class="feature">
+                            <i class="fas fa-glass-cheers d-none d-sm-inline"></i>
+                            <h3>Pub Crawl <span class="badge badge-success">NEW!</span></h3>
+                            <p>Discover the most visited Irish pubs.</p>
+                            <p>We will be visiting the following pubs:</p>
+                            <ul>
+                                <li>Grogan's</li>
+                                <li>The Brazen Head</li>
+                                <li>Kehoes Pub</li>
+                                <li>O’Neills</li>
+                                <li>The Stags Head</li>
+                                <li>and the famous The Temple Bar</li>
                             </ul>
                             <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
                         </div>
